--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                                 Welcome the most annoying thing to the most annoying blockchain (SOL) This is the legendary Crazy Frog MEME, the ONLY ONE.
                             </p>
                             <div class="first__section-buttons">
-                                <button class="first__section-button button">
+                                <button class="first__section-button button" onclick="document.getElementsByClassName('join-now__container')[0].scrollIntoView();">
                                     <img src="./img/dollar-icon.svg" alt="join now" class="button__icon">
                                     JOIN NOW
                                 </button>
-                                <button class="first__section-button button">
+                                <button class="first__section-button button" onclick="document.getElementsByClassName('about-us__container')[0].scrollIntoView();">
                                     <img src="./img/info-icon.svg" alt="read more" class="button__icon">
                                     READ MORE
                                 </button>
