--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ The Crazy Frog meme started with a character called "The Annoying Thing," create
                                     1. Launch
                                 </span>
                                 <span class="phase-item">
-                                    2. Pass pump.fin
+                                    2. Pass pump.fun
                                 </span>
                                 <span class="phase-item">
                                     3. Hit Ray
